Section on cURL

--- a/0.a-python-environment/2.unix-commands.ipynb
+++ b/0.a-python-environment/2.unix-commands.ipynb
@@ -407,7 +407,7 @@
    "source": [
     "## Opérations courantes avec le Web\n",
     "\n",
-    "La communication entre un client et un serveur sur le Web s’effectue au moyen d’un protocole (http, https, ftp) et de méthodes (*verbs*) qui définissent le type d’échanges souhaité. Parmi les méthodes les plus souvent employées :\n",
+    "La communication entre un client et un serveur sur le Web s’effectue au moyen d’un protocole (HTTP, HTTPS, FTP…) et de méthodes (*verbs*) qui définissent le type d’échanges souhaité. Parmi les méthodes les plus souvent employées :\n",
     "- **GET :** obtenir une ressource\n",
     "- **POST :** ajouter une ressource\n",
     "- **PUT :** modifier une ressource\n",
@@ -441,6 +441,35 @@
     "- `-k` : conversion des liens en liens locaux\n",
     "- `-E` : conversion des scripts PHP en pages HTML\n",
     "- `-np` : pour ne pas remonter dans l’arborescence du site"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### *CURL*\n",
+    "\n",
+    "Plus polyvalent que le précédent, l’utilitaire `curl` (*transfer a url*) dialogue avec de nombreux protocoles réseaux (HTTP(S), (S)FTP, LDAP, IMAP(S), SCP, SMB…) pour convoyer des données depuis ou vers un serveur.\n",
+    "\n",
+    "Par défaut, `curl` est programmé en mode **GET**. Pour modifier ce paramétrage, il faut lui passer l’option `-X` :\n",
+    "\n",
+    "```bash\n",
+    "curl -X GET \"https://api.archives-ouvertes.fr/search/?q=<idhal>\"\n",
+    "```\n",
+    "\n",
+    "Parmi les innombrables options de `curl`, citons :\n",
+    "- la possibilité de transmettre des identifiants de connexion :\n",
+    "```bash\n",
+    "curl --user <username>:<password> <URL>\n",
+    "```\n",
+    "- ou encore celle d’utiliser un certificat :\n",
+    "```bash\n",
+    "curl --cert <client.pem> --key <key.pem> --insecure <URL>\n",
+    "```\n"
    ]
   }
  ],
