--- a/0.intro-to-unix-commands/exercises/1.basics.ipynb
+++ b/0.intro-to-unix-commands/exercises/1.basics.ipynb
@@ -48,7 +48,7 @@
     "\n",
     ">Puissé-je à la rosée  \n",
     "Petit à petit me laver  \n",
-    "Des poussières de ce monde?\n",
+    "Des poussières de ce monde ?\n",
     "\n",
     "Commentez le résultat."
    ]
@@ -62,7 +62,7 @@
     "\n",
     "```\n",
     "\n",
-    "**Votre commentaire :** Le programme comptabilise 14 mots alors qu’un comptage manuel en dénombre 15. La différence provient sans doute du tiret qui n’est pas considéré comme un caractère séparateur."
+    "**Votre commentaire :** "
    ]
   },
   {
@@ -101,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
