--- a/0.intro-to-unix-commands/answers/3.the-place-to-be.ipynb
+++ b/0.intro-to-unix-commands/answers/3.the-place-to-be.ipynb
@@ -19,7 +19,7 @@
     "2. supprimer dans ce fichier les guillemets doubles `\"` et sauvegarder le résultat dans un fichier *lorraine.txt* ;\n",
     "3. supprimer le fichier *lorraine.tmp* ;\n",
     "4. découper le contenu du fichier *02_01_2011.xml* en mots avec un mot par ligne ;\n",
-    "5. supprimer de la liste des mots tous ceux qui ne débutent pas par une consonne ;\n",
+    "5. supprimer de la liste des mots tous ceux qui ne débutent pas par une majuscule ;\n",
     "6. trier ces noms propres et comptabiliser leur fréquence d’apparition ;\n",
     "7. filtrer enfin avec `grep` et le fichier *lorraine.txt* la liste des noms propres et enregistrer le résultats dans un fichier *stats.txt*."
    ]
@@ -56,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
