XML header added

--- a/3.xml/answers/2.europarl.ipynb
+++ b/3.xml/answers/2.europarl.ipynb
@@ -63,6 +63,8 @@
     "\n",
     "\n",
     "with open('../files/europarl.xml', 'wb') as xmlfile:\n",
+    "    \n",
+    "    xmlfile.write(b'<?xml version=\"1.0\"?>\\n')\n",
     "\n",
     "    # root element to tree structure\n",
     "    root = ET.Element('europarl')\n",
