--- a/3.xml/answers/2.europarl.ipynb
+++ b/3.xml/answers/2.europarl.ipynb
@@ -74,9 +74,9 @@
     "    # '<v lang=\"en\"/>' and '<v lang=\"fr\"/>'\n",
     "    for row in europarl:\n",
     "        s = ET.SubElement(root, 's')\n",
-    "        for lang in row:\n",
+    "        for lang, content in row.items():\n",
     "            v = ET.SubElement(s, 'v', lang=lang)\n",
-    "            v.text = row[lang]\n",
+    "            v.text = content\n",
     "\n",
     "    # serialize tree in file\n",
     "    tree.write(xmlfile)"
