Section on pretty printing XML

--- a/3.xml/5.element-tree.ipynb
+++ b/3.xml/5.element-tree.ipynb
@@ -197,6 +197,51 @@
     "\n",
     "tree.write('./files/constellations_new.xml')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Considérations sur l’indentation du code XML\n",
+    "\n",
+    "Les espaces entre les éléments n’ont aucune utilité pour une machine, elle servent uniquement pour le confort visuel. Le code ci-dessous, correctement indenté, est parfaitement agréable à la vue :\n",
+    "\n",
+    "```xml\n",
+    "<constellation origin=\"Lacaille\">\n",
+    "    <name fr=\"La Carène\">Carina</name>\n",
+    "    <areas>\n",
+    "        <area unit=\"deg2\">494.184</area>\n",
+    "        <area unit=\"percent\">1.20</area>\n",
+    "    </areas>\n",
+    "</constellation>\n",
+    "```\n",
+    "\n",
+    "Pour une machine, il a en fait exactement la même signification que le code ci-dessous :\n",
+    "\n",
+    "```xml\n",
+    "<constellation origin=\"Lacaille\"><name fr=\"La Carène\">Carina</name><areas><area unit=\"deg2\">494.184</area><area unit=\"percent\">1.20</area></areas></constellation>\n",
+    "```\n",
+    "\n",
+    "Le module *ElementTree* ne se charge pas d’écrire un code parfaitement indenté. Deux solutions existent :\n",
+    "- soit rajouter manuellement des retours à la ligne (`\\n`) et des tabulations (`\\t`) au moment de l’écriture ;\n",
+    "- soit utiliser à la lecture un module qui réalise ce travail.\n",
+    "\n",
+    "Le module `minidom` propose deux méthodes adéquate pour afficher un arbre XML correctement indenté. La première, `parseString()` analyse une chaîne XML ; la seconde, `parse()` prend comme argument un chemin vers un fichier :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xml.dom.minidom\n",
+    "\n",
+    "xml_string = '<constellation origin=\"Lacaille\"><name fr=\"La Carène\">Carina</name><areas><area unit=\"deg2\">494.184</area><area unit=\"percent\">1.20</area></areas></constellation>'\n",
+    "\n",
+    "dom = xml.dom.minidom.parseString(xml_string)\n",
+    "print(dom.toprettyxml())"
+   ]
   }
  ],
  "metadata": {
