--- a/4.grammars/answers/le-caire.ipynb
+++ b/4.grammars/answers/le-caire.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "import csv\n",
     "\n",
-    "with open('../files/obama_le_caire.tsv') as csvfile:\n",
+    "with open('../files/obama-le-caire.tsv') as csvfile:\n",
     "    fieldnames = ['en', 'fr', 'es']\n",
     "    reader = csv.DictReader(csvfile, delimiter='\\t', fieldnames=fieldnames)\n",
     "    \n",
@@ -45,7 +45,7 @@
     "import xml.etree.ElementTree as ET\n",
     "\n",
     "# open new file\n",
-    "with open('../files/obama_le_caire.tmx', 'wb') as xmlfile:\n",
+    "with open('../files/obama-le-caire.tmx', 'wb') as xmlfile:\n",
     "    \n",
     "    # prologue\n",
     "    xmlfile.write(b'<?xml version=\"1.0\"?>\\n')\n",
