--- a/4.grammars/exercises/le-caire.ipynb
+++ b/4.grammars/exercises/le-caire.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "import csv\n",
     "\n",
-    "with open('../files/obama_le_caire.tsv') as csvfile:\n",
+    "with open('../files/obama-le-caire.tsv') as csvfile:\n",
     "    fieldnames = ['en', 'fr', 'es']\n",
     "    reader = csv.DictReader(csvfile, delimiter='\\t', fieldnames=fieldnames)\n",
     "    \n",
