--- a/6.xslt/1.introduction.ipynb
+++ b/6.xslt/1.introduction.ipynb
@@ -143,7 +143,7 @@
     "        <!-- call for application for nodes 'author' -->\n",
     "        <xsl:apply-templates select=\"//author\"/>\n",
     "        <!-- call for application for nodes 'year' (only one) -->\n",
-    "        <xsl:apply-templates select=\"//annee\"/>\n",
+    "        <xsl:apply-templates select=\"//year\"/>\n",
     "    </bbt>\n",
     "</xsl:template>\n",
     "```"
@@ -367,7 +367,7 @@
     "\n",
     "    <html lang=\"fr\" xmlns=\"http://www.w3.org/1999/xhtml\">\n",
     "        <head>\n",
-    "            <title>Présentation | <xsl:apply-templates select=\"serie/@titre\"/></title>\n",
+    "            <title>Présentation | <xsl:apply-templates select=\"show/@title\"/></title>\n",
     "            <meta charset=\"utf-8\"/>\n",
     "        </head>\n",
     "        <body>\n",
@@ -580,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
