--- a/6.xslt/2.basics.ipynb
+++ b/6.xslt/2.basics.ipynb
@@ -139,8 +139,8 @@
     "Appliqué au fragment XML décrit plus haut, ce template produira la structure suivante :\n",
     "\n",
     "```xml\n",
-    "<b lastname=\"lastName\">Cooper</b>\n",
-    "<b lastname=\"lastName\">Hofstadter</b>\n",
+    "<b lastname=\"lastName\">Sheldon</b>\n",
+    "<b lastname=\"lastName\">Leonard</b>\n",
     "```\n",
     "\n",
     "Le problème ici vient du fait que l’élément `b`, n’étant pas préfixé par `xsl`, n’a aucune fonction dans le langage et se comporte comme du texte brut. Le terme `lastName` assigné comme valeur de l’attribut `lastname` n’est par conséquent interprété comme une expression XPath.\n",
@@ -338,17 +338,17 @@
     "\n",
     "|Expression|Description|\n",
     "|:-:|:-|\n",
-    "|`element`|Teste la présence d’un élément element|\n",
-    "|`@attribut`|Teste la présence d’un attribut attribut|\n",
+    "|`element`|Teste la présence d’un élément `element`|\n",
+    "|`@attribut`|Teste la présence d’un attribut `attribut`|\n",
     "|`a = b`|Teste si `a` et `b` partagent la même valeur.|\n",
     "|`not(a = b)`|Teste si `a` et `b` ne partagent pas la même valeur.|\n",
-    "|`a &amp;lt; b`|Teste si la valeur de `a` est strictement inférieure à `b`.|\n",
-    "|`a &amp;gt; b`|Teste si la valeur de `a` est strictement supérieure à `b`.|\n",
-    "|`a &amp;lt;= b`|Teste si la valeur de `a` est inférieure ou égale à `b`.|\n",
-    "|`a &amp;gt;= b`|Teste si la valeur de `a` est supérieure ou égale à `b`.|\n",
+    "|`a &lt; b`|Teste si la valeur de `a` est strictement inférieure à `b`.|\n",
+    "|`a &gt; b`|Teste si la valeur de `a` est strictement supérieure à `b`.|\n",
+    "|`a &lt;= b`|Teste si la valeur de `a` est inférieure ou égale à `b`.|\n",
+    "|`a &gt;= b`|Teste si la valeur de `a` est supérieure ou égale à `b`.|\n",
     "\n",
     "**Remarques :**\n",
-    "- L’entité `&amp;` doit vraiment être encodée telle quelle ;\n",
+    "- les entités doivent vraiment être encodées telles quelles ;\n",
     "- les opérateurs logiques `and` et `or` permettent de combiner plusieurs conditions.\n",
     "\n",
     "#### Fonction `choose`\n",
@@ -474,7 +474,7 @@
     "    <!-- store details about actor -->\n",
     "    <xsl:variable name=\"actor\" select=\"//actor[@pIDREF = $id]\"/>\n",
     "    <xsl:element name=\"character\">\n",
-    "        <xsl:attribute name=\"lastName\">\n",
+    "        <xsl:attribute name=\"name\">\n",
     "            <xsl:value-of select=\"firstName\"/>\n",
     "            <xsl:text> </xsl:text>\n",
     "            <xsl:value-of select=\"lastName\"/>\n",
@@ -559,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
