--- a/7.everything-else/1.googletrans.ipynb
+++ b/7.everything-else/1.googletrans.ipynb
@@ -57,7 +57,7 @@
     "translated.src\n",
     "\n",
     "# language to translate into?\n",
-    "translated.en\n",
+    "translated.dest\n",
     "\n",
     "# pronunciation?\n",
     "translated.pronunciation"
