--- a/7.everything-else/2.wordnet.ipynb
+++ b/7.everything-else/2.wordnet.ipynb
@@ -542,6 +542,69 @@
     "\n",
     "synonyms = get_synonyms('barca', 'n', 'ita')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## La lemmatisation avec WordNet\n",
+    "\n",
+    "Plutôt que de manipuler les *synsets* de Wordnet pour atteindre les lemmes d’un terme, NLTK facilite les opérations grâce à un lemmatiseur embarqué :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem import WordNetLemmatizer\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "lemmatizer.lemmatize('wondering')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "La lemmatisation dépend donc grandement de l’étiquette grammaticale (POS tagging) affectée au terme, contrairement à la racinisation qui, elle, repose sur la morphologie :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "lemmatizer.lemmatize('wondering', pos='v')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Pour rappel, les étiquettes grammaticales adoptées par WordNet sont :\n",
+    "- `n` : *noun*\n",
+    "- `a` : *adjective*\n",
+    "- `r` : *adverb*\n",
+    "- `v` : *verb*"
+   ]
   }
  ],
  "metadata": {
@@ -561,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
