Block on .info() method

--- a/7.everything-else/3.data-frames.ipynb
+++ b/7.everything-else/3.data-frames.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Découverte des *data frames*"
    ]
@@ -24,7 +26,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Aperçu avec la librairie *Pandas*\n",
     "\n",
@@ -100,7 +104,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Importer un fichier CSV"
    ]
@@ -120,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_table('./files/arrests.csv')"
+    "df = pd.read_table('./data/arrests.csv')"
    ]
   },
   {
@@ -143,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le résultat de l’importation n’est pas probant. Il faut sacoir que, par défaut, le caractère de séparation de la méthode `read_table()` est la tabulation et qu’il peut se paramétrer avec le paramètre `sep` :"
+    "Le résultat de l’importation n’est pas probant. Il faut savoir que, par défaut, le caractère de séparation de la méthode `read_table()` est la tabulation et qu’il peut se paramétrer avec le paramètre `sep` :"
    ]
   },
   {
@@ -152,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_table('./files/arrests.csv', sep=\",\")\n",
+    "df = pd.read_table('./data/arrests.csv', sep=\",\")\n",
     "df.head()"
    ]
   },
@@ -169,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./files/arrests.csv')\n",
+    "df = pd.read_csv('./data/arrests.csv')\n",
     "df.head()"
    ]
   },
@@ -224,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./files/arrests.csv', header=None)\n",
+    "df = pd.read_csv('./data/arrests.csv', header=None)\n",
     "df.head()"
    ]
   },
@@ -232,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dans ce cas-là, votre ligne d’en-tête devient une ligne comme les autres mais avec des résultats abérrants. La première variable de votre fichier, qui devrait être un vecteur numérique, affiche à présent `NaN` pour *Not a Number*. La raison en est simple : dans le fichier de départ, la première variable n’est pas nommée afin d’indiquer qu’il s’agit de la colonne d’index des observations. Or, comme on s’attend à trouver une donnée numérique, Python la considère comme une abérration.\n",
+    "Dans ce cas-là, votre ligne d’en-tête devient une ligne comme les autres mais avec des résultats aberrants. La première variable de votre fichier, qui devrait être un vecteur numérique, affiche à présent `NaN` pour *Not a Number*. La raison en est simple : dans le fichier de départ, la première variable n’est pas nommée afin d’indiquer qu’il s’agit de la colonne d’index des observations. Or, comme on s’attend à trouver une donnée numérique, Python la considère comme une aberration.\n",
     "\n",
     "Pour passer outre, utilisez le paramètre `skiprows` :"
    ]
@@ -243,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./files/arrests.csv', header=None, skiprows=1)\n",
+    "df = pd.read_csv('./data/arrests.csv', header=None, skiprows=1)\n",
     "df.head()"
    ]
   },
@@ -261,7 +267,7 @@
    "outputs": [],
    "source": [
     "names = ['Relâché', 'Année', 'Âge', 'Genre', 'En activité', 'Torontois', 'Citations']\n",
-    "df = pd.read_csv('./files/arrests.csv', header=None, skiprows=1, names=names)\n",
+    "df = pd.read_csv('./data/arrests.csv', header=None, skiprows=1, names=names)\n",
     "df.head()"
    ]
   },
@@ -278,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./files/arrests.csv', index_col=[0])\n",
+    "df = pd.read_csv('./data/arrests.csv', index_col=[0])\n",
     "df.head()"
    ]
   },
@@ -297,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./files/arrests.csv', index_col=[0])\n",
+    "df = pd.read_csv('./data/arrests.csv', index_col=[0])\n",
     "df.dtypes"
    ]
   },
@@ -314,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./files/arrests.csv', index_col=[0], dtype={'year': int})\n",
+    "df = pd.read_csv('./data/arrests.csv', index_col=[0], dtype={'year': int})\n",
     "df.dtypes"
    ]
   },
@@ -396,7 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./files/arrests.csv', index_col=[0])\n",
+    "df = pd.read_csv('./data/arrests.csv', index_col=[0])\n",
     "\n",
     "print(\n",
     "    f\"released ==> { df['released'].unique() }\",\n",
@@ -553,7 +559,23 @@
    "source": [
     "## Décrire les données\n",
     "\n",
-    "La librairie *Pandas* fournit un ensemble de méthodes pour décrire les données. La première d’entre elles, `describe()` fournit un aperçu des vecteurs numériques grâce à quelques statistiques :"
+    "La librairie *Pandas* fournit un ensemble de méthodes pour décrire les données. La première d’entre elles, `info()` affiche un résumé du *data frame* (nom des variables, présence de valeurs nulles, nombre d’observations) :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La méthode `describe()` fournit quant à elle un aperçu des vecteurs numériques grâce à quelques statistiques :"
    ]
   },
   {
@@ -614,7 +636,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -628,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
