--- a/7.everything-else/3.data-frames.ipynb
+++ b/7.everything-else/3.data-frames.ipynb
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_table(\"./data/arrests.csv\")"
+    "df = pd.read_table(\"./files/arrests.csv\")"
    ]
   },
   {
@@ -185,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_table(\"./data/arrests.csv\", sep=\",\")\n",
+    "df = pd.read_table(\"./files/arrests.csv\", sep=\",\")\n",
     "df.head()"
    ]
   },
@@ -202,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data/arrests.csv\")\n",
+    "df = pd.read_csv(\"./files/arrests.csv\")\n",
     "df.head()"
    ]
   },
@@ -286,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data/arrests.csv\", header=None)\n",
+    "df = pd.read_csv(\"./files/arrests.csv\", header=None)\n",
     "df.head()"
    ]
   },
@@ -305,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data/arrests.csv\", header=None, skiprows=1)\n",
+    "df = pd.read_csv(\"./files/arrests.csv\", header=None, skiprows=1)\n",
     "df.head()"
    ]
   },
@@ -323,7 +323,7 @@
    "outputs": [],
    "source": [
     "names = [\"Relâché\", \"Année\", \"Âge\", \"Genre\", \"En activité\", \"Torontois\", \"Citations\"]\n",
-    "df = pd.read_csv(\"./data/arrests.csv\", header=None, skiprows=1, names=names)\n",
+    "df = pd.read_csv(\"./files/arrests.csv\", header=None, skiprows=1, names=names)\n",
     "df.head()"
    ]
   },
@@ -340,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data/arrests.csv\", index_col=[0])\n",
+    "df = pd.read_csv(\"./files/arrests.csv\", index_col=[0])\n",
     "df.head()"
    ]
   },
@@ -391,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data/arrests.csv\", index_col=[0])\n",
+    "df = pd.read_csv(\"./files/arrests.csv\", index_col=[0])\n",
     "df.dtypes"
    ]
   },
@@ -408,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data/arrests.csv\", index_col=[0], dtype={\"year\": int})\n",
+    "df = pd.read_csv(\"./files/arrests.csv\", index_col=[0], dtype={\"year\": int})\n",
     "df.dtypes"
    ]
   },
@@ -462,7 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data/davis.csv\", index_col=[0])\n",
+    "df = pd.read_csv(\"./files/davis.csv\", index_col=[0])\n",
     "\n",
     "df.info()"
    ]
@@ -607,7 +607,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data/davis.csv\", index_col=[0])\n",
+    "df = pd.read_csv(\"./files/davis.csv\", index_col=[0])\n",
     "\n",
     "df = df.fillna(0)\n",
     "df"
@@ -626,7 +626,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data/davis.csv\", index_col=[0])\n",
+    "df = pd.read_csv(\"./files/davis.csv\", index_col=[0])\n",
     "\n",
     "df[\"repht\"].fillna(method=\"pad\", inplace=True)\n",
     "df[\"repwt\"].fillna(method=\"bfill\", inplace=True)\n",
@@ -646,7 +646,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data/davis.csv\", index_col=[0])\n",
+    "df = pd.read_csv(\"./files/davis.csv\", index_col=[0])\n",
     "\n",
     "repht_mean = int(df[\"repht\"].mean())\n",
     "df[\"repht\"].fillna(repht_mean, inplace=True)\n",
@@ -676,7 +676,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data/arrests.csv\", index_col=[0])\n",
+    "df = pd.read_csv(\"./files/arrests.csv\", index_col=[0])\n",
     "\n",
     "translations = {\n",
     "    \"Yes\": 1,\n",
@@ -718,7 +718,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data/arrests.csv\", index_col=[0])\n",
+    "df = pd.read_csv(\"./files/arrests.csv\", index_col=[0])\n",
     "\n",
     "print(\n",
     "    f\"released ==> { df['released'].unique() }\",\n",
@@ -758,7 +758,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data/arrests.csv\", index_col=[0])\n",
+    "df = pd.read_csv(\"./files/arrests.csv\", index_col=[0])\n",
     "\n",
     "df[\"checks\"]"
    ]
