--- a/0.intro-to-unix-commands/answers/3.the-place-to-be.ipynb
+++ b/0.intro-to-unix-commands/answers/3.the-place-to-be.ipynb
@@ -33,7 +33,7 @@
     "sed 's/http:\\/\\/fr.dbpedia.org\\/resource\\///g' dbpedia.txt > lorraine.tmp\n",
     "sed 's/\"//g' lorraine.tmp > lorraine.txt\n",
     "rm lorraine.tmp\n",
-    "tr -cs \"[:alpha:]\" \"\\n\" < 02_01_2011.xml | sed '/^$/d' | > mots.txt\n",
+    "tr -cs \"[:alpha:]\" \"\\n\" < 02_01_2011.xml | sed '/^$/d' > mots.txt\n",
     "sed '/^[^A-Z]/d' mots.txt | sort | uniq -c > noms-propres.txt\n",
     "cat noms-propres.txt| grep -f lorraine.txt > stats.txt\n",
     "```"
