--- a/2.normalization/3.capturing.ipynb
+++ b/2.normalization/3.capturing.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "L’objectif ici est de récupérer les deux noms propres. Il s’agit de sous-chaînes de longueurs variables, composées de caractères alphabétique dont le premier est une majuscule et qui sont séparées l’une de l’autre par une espace. On peut traduire ces contraintes par la *regex* suivante :"
+    "L’objectif ici est de récupérer les deux noms propres. Il s’agit de sous-chaînes de longueurs variables, composées de caractères alphabétiques dont le premier est une majuscule et qui sont séparées l’une de l’autre par une espace. On peut traduire ces contraintes par la *regex* suivante :"
    ]
   },
   {
@@ -172,7 +172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -186,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
