--- a/3.xml/4.namespaces.ipynb
+++ b/3.xml/4.namespaces.ipynb
@@ -11,8 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## De l’ambiguïté\n",
-    "\n",
+    "## De l’ambiguïté"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Certains énoncés en français sont ambigus :\n",
     "> (1) Le chewing-gum reste collé au fond du palais.  \n",
     "> (2) Il s’est mangé un pain.  \n",
@@ -31,8 +36,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## De la personnalisation des éléments\n",
-    "\n",
+    "## De la personnalisation des éléments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "XML permet de définir des vocabulaires personnalisés. Solenn et Yvonnig décrivent, chacun de son côté, un objet, *Le Cid* de Corneille :\n",
     "\n",
     "```xml\n",
@@ -56,15 +66,20 @@
     "\n",
     "Plus tard, leurs formats de description font autorité et ils décident de les publier à deux adresses distinctes :\n",
     "- **format de Solenn :** http://sowebsite.fr/formatdeso\n",
-    "- **format de Yvonnig :** http://yvowebsite.fr/formatdeyvo\n"
+    "- **format de Yvonnig :** http://yvowebsite.fr/formatdeyvo"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## De la référence à un format\n",
-    "\n",
+    "## De la référence à un format"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Un jour, Soazig prend connaissance du format de Solenn et décide de l’utiliser pour décrire un objet similaire. Elle fait référence au format de Solenn dans un attribut `xmlns` (*XML Namespace*) pour déclarer le vocabulaire utilisé.\n",
     "\n",
     "```xml\n",
@@ -81,8 +96,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## De la référence à plusieurs formats\n",
-    "\n",
+    "## De la référence à plusieurs formats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Soazig apprend ensuite l’existence du format de Yvonnig et souhaite améliorer la description de son objet en faisant référence aux deux formats :\n",
     "\n",
     "```xml\n",
@@ -102,9 +122,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## De la désambiguïsation\n",
-    "\n",
-    "**Solution :** ajouter UNE étiquette pour rattacher L’élément à son format de référence :\n",
+    "## De la désambiguïsation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Solution :** ajouter une étiquette pour rattacher l’élément à son format de référence :\n",
     "\n",
     "```XML\n",
     "<!-- Espaces de nommages préfixés -->\n",
@@ -127,8 +152,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Du principe d’héritage\n",
-    "\n",
+    "## Du principe d’héritage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Chaque *namespace* est actif pour l’élément dans lequel il est déclaré ainsi que pour ses descendants. Le préfixe est d’ailleurs inutile s’il n’existe aucune ambiguïté :\n",
     "\n",
     "```xml\n",
@@ -159,8 +189,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### À portée\n",
-    "\n",
+    "### À portée"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Dans l’exemple ci-dessous, tous les éléments sont à portée du *namespace*.\n",
     "\n",
     "```xml\n",
@@ -177,8 +212,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hors de portée\n",
-    "\n",
+    "### Hors de portée"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Dans cet exemple au contraire, le 2e élement `livre` est hors de portée du premier.\n",
     "\n",
     "```xml\n",
@@ -201,8 +241,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Le principe d’héritage\n",
-    "\n",
+    "## Le principe d’héritage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Le principe d’héritage offre la possibilité de simplifier l’écriture :\n",
     "\n",
     "```xml\n",
@@ -236,8 +281,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Des espaces de nommage célèbres\n",
-    "\n",
+    "## Des espaces de nommage célèbres"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- **XHTML :** http://www.w3.org/1999/xhtml\n",
     "- **MathML :** http://www.w3.org/1998/Math/MathML\n",
     "- **XSL :** http://www.w3.org/1999/XSL/Transform\n",
@@ -254,8 +304,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Un exemple concret\n",
-    "\n",
+    "## Un exemple concret"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```xml\n",
     "<!DOCTYPE html>\n",
     "<html lang=\"fr\" xmlns=\"http://www.w3.org/1999/xhtml\" xmlns:m=\"http://www.w3.org/1998/Math/MathML\">\n",
@@ -281,7 +336,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -295,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
