--- a/3.xml/5.element-tree.ipynb
+++ b/3.xml/5.element-tree.ipynb
@@ -29,9 +29,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analyser du code XML\n",
-    "\n",
-    "Une méthode `parse()` qui prend en argument le chemin vers un fichier XML permet d’en modéliser la structure. Généralement, la première opération qui suit consiste à récupérer l’élément racine du document afin de s’en servir comme point de référence :"
+    "## Analyser du code XML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Une méthode `.parse()` qui prend en argument le chemin vers un fichier XML permet d’en modéliser la structure. Généralement, la première opération qui suit consiste à récupérer l’élément racine du document afin de s’en servir comme point de référence :"
    ]
   },
   {
@@ -83,9 +88,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rechercher des éléments\n",
-    "\n",
-    "L’API met à disposition deux méthodes pour rechercher des éléments à l’intérieur de la structure. La première, `iter()`, parcourt tout l’arbre à la recherche de la correspondance."
+    "## Rechercher des éléments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "L’API met à disposition deux méthodes pour rechercher des éléments à l’intérieur de la structure. La première, `.iter()`, parcourt tout l’arbre à la recherche de la correspondance."
    ]
   },
   {
@@ -103,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La seconde méthode, `findall()`, s’arrête quant à elle aux enfants directs. Citons également la méthode `find()` qui recherche la première correspondance d’un élément, et la méthode `get()` qui permet d’accéder à un attribut spécifié en argument."
+    "La seconde méthode, `.findall()`, s’arrête quant à elle aux enfants directs. Citons également la méthode `.find()` qui recherche la première correspondance d’un élément, et la méthode `.get()` qui permet d’accéder à un attribut spécifié en argument."
    ]
   },
   {
@@ -123,11 +133,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Créer des éléments et des sous-éléments\n",
+    "## Créer des éléments et des sous-éléments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les fonctions `Element()` et `SubElement()` figurent la meilleure façon de créer rapidement une arborescence XML. La première prend comme argument une étiquette ; la seconde prend comme premier argument l’élément auquel elle se rattache et en second argument une étiquette. Elles acceptent toutes deux un dictionnaire pour les attributs à définir.\n",
     "\n",
-    "Les fonctions `Element()` et `SubElement()` figurent la meilleure façon de créer rapidement une arborescence XML. La première prend comme argument une étiquette ; la seconde prend comme premier argument l’élément auquel elle se rattache et en second argument une étiquette. Elles acceptent toutes deux un dictionnaire pour les attributs à définir.\n",
-    "\n",
-    "Enfin, la méthode `write()` permet de sérialiser l’arborescence dans un document XML."
+    "Enfin, la méthode `.write()` permet de sérialiser l’arborescence dans un document XML."
    ]
   },
   {
@@ -163,12 +178,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modifier des éléments\n",
-    "\n",
+    "## Modifier des éléments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Les opérations essentielles de modification d’un élément sont assurées par les méthodes suivantes :\n",
-    "- `set()` pour agir sur les attributs\n",
-    "- `append()` pour ajouter un élément fils\n",
-    "- `remove()` pour supprimer un élément fils\n",
+    "- `.set()` pour agir sur les attributs\n",
+    "- `.append()` pour ajouter un élément fils\n",
+    "- `.remove()` pour supprimer un élément fils\n",
     "\n",
     "Pour remplacer le contenu textuel d’un élément, il suffit de remplacer le contenu de la propriété `text`. Et pour supprimer un attribut, utiliser l’instruction `del`."
    ]
@@ -202,8 +222,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Considérations sur l’indentation du code XML\n",
-    "\n",
+    "## Considérations sur l’indentation du code XML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Les espaces entre les éléments n’ont aucune utilité pour une machine, elle servent uniquement pour le confort visuel. Le code ci-dessous, correctement indenté, est parfaitement agréable à la vue :\n",
     "\n",
     "```xml\n",
@@ -226,7 +251,7 @@
     "- soit rajouter manuellement des retours à la ligne (`\\n`) et des tabulations (`\\t`) au moment de l’écriture ;\n",
     "- soit utiliser à la lecture un module qui réalise ce travail.\n",
     "\n",
-    "Le module `minidom` propose deux méthodes adéquate pour afficher un arbre XML correctement indenté. La première, `parseString()` analyse une chaîne XML ; la seconde, `parse()` prend comme argument un chemin vers un fichier :"
+    "Le module `minidom` propose deux méthodes adéquates pour formater correctement un arbre XML. La première, `.parseString()` analyse une chaîne XML ; la seconde, `.parse()` prend comme argument un chemin vers un fichier. Pour voir le rendu, il faut invoquer la méthode `.toprettyxml()` :"
    ]
   },
   {
@@ -246,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -260,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
