--- a/3.xml/5.element-tree.ipynb
+++ b/3.xml/5.element-tree.ipynb
@@ -199,6 +199,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tree = ET.parse('./files/constellations.xml')\n",
+    "\n",
     "for idx, child in enumerate(root.findall('constellation')):\n",
     "\n",
     "    # add an 'id' attribute\n",
