XPath with xmllint

--- a/5.xpath/1.XPath.ipynb
+++ b/5.xpath/1.XPath.ipynb
@@ -11,8 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Présentation\n",
-    "\n",
+    "## Présentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Le langage XPath est à la croisée des chemins de plusieurs technologies. On retrouve par exemple des expressions XPath dans XSLT et XQuery. En plus d’une syntaxe déclarative qui permet de tracer un chemin dans l’arborescence d’un document, XPath continue d’implémenter au long de ses versions successives des fonctions de plus en plus variées qui finissent par lui donner des airs de langage de programmation.\n",
     "\n",
     "![À la croisée des chemins](./pics/1-fig1.png)\n",
@@ -31,8 +36,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Les nœuds parents\n",
-    "\n",
+    "### Les nœuds parents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Les nœuds n’ont toujours qu’un seul parent.\n",
     "\n",
     "```xml\n",
@@ -49,8 +59,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Les nœuds enfants\n",
-    "\n",
+    "### Les nœuds enfants"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Un nœud peut avoir un ou plusieurs enfants, voire aucun.\n",
     "\n",
     "```xml\n",
@@ -67,8 +82,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Les fratries\n",
-    "\n",
+    "### Les fratries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "La fratrie caractérise les nœuds qui partagent le même parent.\n",
     "\n",
     "```xml\n",
@@ -85,8 +105,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Les ancêtres et les descendants\n",
-    "\n",
+    "### Les ancêtres et les descendants"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Les ancêtres désignent le parent d’un nœud, son parent à lui, et ainsi de suite jusqu’à remonter à la racine du document. À l’inverse, la relation de descendants désigne les enfants d’un nœud, ses enfants à lui, etc.\n",
     "\n",
     "```xml\n",
@@ -106,8 +131,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La syntaxe des requêtes\n",
-    "\n",
+    "## La syntaxe des requêtes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Les exemples qui suivent se basent sur le document XML ci-dessous :\n",
     "\n",
     "```xml\n",
@@ -142,8 +172,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Les expressions XPath\n",
-    "\n",
+    "### Les expressions XPath"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Les requêtes XPath répondent à une syntaxe précise qui permet d’effectuer des requêtes sur un document structuré.\n",
     "\n",
     "|Expression|Description|\n",
@@ -163,8 +198,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exemples de requêtes basées sur les expressions\n",
-    "\n",
+    "#### Exemples de requêtes basées sur les expressions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- sélectionner tous les personnages :\n",
     "```\n",
     "/show/characters\n",
@@ -189,8 +229,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Les prédicats\n",
-    "\n",
+    "### Les prédicats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Pour sélectionner un nœud spécifique, la syntaxe met à disposition la notation crochets `[]` avec, à l’intérieur, la condition à réaliser pour la sélection.\n",
     "\n",
     "Par exemple, pour sélectionner le nœud qui identifie le personnage de Penny, plusieurs possibilités (non exhaustives) :\n",
@@ -207,8 +252,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Les opérateurs\n",
-    "\n",
+    "### Les opérateurs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Sans surprise, le langage met à disposition les opérateurs classiques de tout langage :\n",
     "\n",
     "- **arithmétiques :** `+` `-` `*` `div` `mod`\n",
@@ -232,8 +282,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Les lignages\n",
-    "\n",
+    "### Les lignages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Les lignages désignent une catégorie de mots-clés pour sélectionner un ensemble de nœuds relativement au nœud courant.\n",
     "\n",
     "|Lignage|Description|\n",
@@ -282,8 +337,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Les fonctions natives\n",
-    "\n",
+    "### Les fonctions natives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "XPath partage une [librairie de fonctions](https://www.w3.org/TR/xpath-functions-3/) commune avec XQuery et XSLT."
    ]
   },
@@ -365,11 +425,34 @@
     "|`position()`|Renvoie la position du nœud courant.|\n",
     "|`sum(a,b[,…])`|Calcule la somme des arguments.|"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tester une expression en ligne de commande"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "L’utilitaire `xmllint` permet d’exécuter des expressions XPath sur un document XML grâce à l’option `-xpath` :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!xmllint -xpath '//name[@fr]/text()' ./files/constellations.xml"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -383,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
