--- a/5.xpath/1.XPath.ipynb
+++ b/5.xpath/1.XPath.ipynb
@@ -448,6 +448,40 @@
    "source": [
     "!xmllint -xpath '//name[@fr]/text()' ./files/constellations.xml"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Remarque :** `xmllint` ne connaît que la version 1.0 du langage. Des expressions issues d’une version supérieure ne peuvent ainsi pas être évaluées :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!xmllint --xpath 'tokenize(//author[@id_author = \"BOR\"]/birth, \"-\")' ./files/library.xml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comment faire alors ? Aucune fonction de la librairie standard Unix n’est prévue pour répondre à ces exigences, pour la simple et bonne raison que la version 2.0 de XPath n’apporte rien de nouveau à part des fonctions pour faciliter certaines tâches.\n",
+    "\n",
+    "L’idée est alors de regarder ailleurs, dans des librairies tierces, comme `xidel` ou [`saxon-lint`](https://gitlab.com/GillesQuenot/saxon-lint) de Gilles Quenot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!saxon-lint --xpath 'tokenize(//author[@id_author = \"BOR\"]/birth, \"-\")' ./files/library.xml"
+   ]
   }
  ],
  "metadata": {
@@ -466,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
