--- a/6.xslt/1.introduction.ipynb
+++ b/6.xslt/1.introduction.ipynb
@@ -11,8 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Présentation\n",
-    "\n",
+    "## Présentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**XSL(T) :** *eXtensible Stylesheet Language Transformations*\n",
     "\n",
     "D’un point de vue formel, le langage XSLT est une grammaire écrite en XML qui utilise le langage XPath pour naviguer parmi les nœuds d’un document structuré. Il est à considérer comme un équivalent du CSS pour le langage HTML, en ce sens qu’il va transformer le document source pour en fournir une autre version. Il s’agit en plus d’une [recommandation du W3C](https://www.w3.org/TR/xslt-30/)\n",
@@ -28,8 +33,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Principe d’une transformation\n",
-    "\n",
+    "### Principe d’une transformation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "XSLT produit en sortie un document modélisable sous forme d’arbre (XML, HTML, PDF, RTF, SVG…) :\n",
     "\n",
     "![Schéma de transformation d’un document structuré vers un autre document structuré](./pics/1-fig1.png)"
@@ -39,8 +49,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Modèle d’une feuille de transformation\n",
-    "\n",
+    "### Modèle d’une feuille de transformation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```xml\n",
     "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
     "\n",
@@ -73,8 +88,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Produire un nouveau document XML\n",
-    "\n",
+    "## Produire un nouveau document XML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Transformer un document XML en un autre document XML. L’intérêt peut au premier abord sembler obscur. Pourtant, les occasions d’harmoniser un ensemble de documents variés pour les intégrer dans un système cohérent ne manquent pas :\n",
     "- catalogues de fournisseurs ;\n",
     "- procédures de transferts bancaires ;\n",
@@ -109,8 +129,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1e étape : écrire la feuille de transformation minimale\n",
-    "\n",
+    "### 1e étape : écrire la feuille de transformation minimale"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```xml\n",
     "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
     "\n",
@@ -133,9 +158,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2e étape : décrire la règle principale de transformation\n",
-    "\n",
-    "```xml\n",
+    "### 2e étape : décrire la règle principale de transformation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3e étape : description des templates candidats```xml\n",
     "<!-- backbone -->\n",
     "<xsl:template match=\"/\">\n",
     "    <!-- root element of the output -->\n",
@@ -153,8 +183,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3e étape : description des templates candidats\n",
-    "\n",
+    "### 3e étape : description des templates candidats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```xml\n",
     "<!-- candidate 'author' -->\n",
     "<xsl:template match=\"author\">\n",
@@ -184,8 +219,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lancer la transformation avec le module *lxml*\n",
-    "\n",
+    "### Lancer la transformation avec le module *lxml*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Le module *lxml* est un autre module Python qui permet de manipuler des documents XML tout en offrant un support pour XSLT. Il est à noter qu’il est en plus compatible avec les commandes de base du module  *elementTree* :"
    ]
   },
@@ -304,8 +344,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Produire un document HTML\n",
-    "\n",
+    "## Produire un document HTML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Un autre des intérêts de transformer un document XML en un autre document XML est lorsque l’on souhaite se reposer sur un document XML pour créer une page HTML.\n",
     "\n",
     "À partir du même document XML, l’objectif est maintenant de produire un fichier *big-bang-theory.html* :\n",
@@ -330,8 +375,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1e étape : écrire la feuille de transformation minimale\n",
-    "\n",
+    "### 1e étape : écrire la feuille de transformation minimale"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```xml\n",
     "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
     "<xsl:stylesheet version=\"3.0\" xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\">\n",
@@ -356,8 +406,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2e étape : décrire la règle principale de transformation\n",
-    "\n",
+    "### 2e étape : décrire la règle principale de transformation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```xml\n",
     "<!-- backbone -->\n",
     "<xsl:template match=\"/\">\n",
@@ -395,8 +450,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3e étape : description des templates candidats\n",
-    "\n",
+    "### 3e étape : description des templates candidats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```xml\n",
     "<!-- a template than can apply to all calls -->\n",
     "<xsl:template match=\"*\">\n",
@@ -447,8 +507,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Un ensemble de règles\n",
-    "\n",
+    "### Un ensemble de règles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Les transformations respectent un modèle de traitement par ensemble de règles :\n",
     "\n",
     "1. Sélection des noeuds correspondant au *pattern* ;\n",
@@ -476,8 +541,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Une résolution non-linéaire des règles\n",
-    "\n",
+    "### Une résolution non-linéaire des règles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Plutôt que d’exécuter les règles dans l’ordre de leur apparition dans le code, XSLT repose sur la notion de hiérarchie des instructions. La fonction `apply-templates` est alors chargée de déclencher le traitement des enfants liés au modèle :\n",
     "\n",
     "```xml\n",
@@ -502,10 +572,20 @@
     "    <b>Date de naissance :</b>\n",
     "    <xsl:value-of select=\"format-date(.,'[D01] [MNn] [Y0001]')\"/>\n",
     "</xsl:template>\n",
-    "```\n",
-    "\n",
-    "### Rôles d’un template\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rôles d’un template"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1. Interroger l’emplacement du pointeur dans la modélisation sous forme arborescente du document XML.\n",
     "2. Tester la validité de l’expression XPath (attribut `match`).\n",
     "    - Si elle est éligible :\n",
@@ -519,11 +599,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Les variables en XSLT\n",
-    "\n",
-    "\n",
-    "### Enregistrer un résultat\n",
-    "\n",
+    "## Les variables en XSLT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Enregistrer un résultat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "XSLT peut stocker le résultat d’une expression XPath dans une variable, tout comme du texte simple :\n",
     "\n",
     "```xml\n",
@@ -546,10 +635,20 @@
     "<xsl:variable name=\"nb\" select=\"count(//character)\"/>\n",
     "<!-- a boolean -->\n",
     "<xsl:variable name=\"isLeonard\" select=\"//firstname='Leonard'\"/>\n",
-    "```\n",
-    "\n",
-    "### Appeler une variable\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Appeler une variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Une fois instanciée, une variable est référencée par le préfixe `$` :\n",
     "\n",
     "```xml\n",
@@ -561,6 +660,45 @@
     "<!-- elements and attributes are also copied -->\n",
     "<xsl:copy-of select=\"$copyright\"/>\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exécuter une transformation en ligne de commande"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "L’utilitaire qui applique une feuille de transformations à un document XML s’appelle `xsltproc`. Il est prévu pour fonctionner avec les spécifications XPath 1.1, aussi toute fonction XPath 2 ou d’une version supérieure provoquera une erreur bloquante. Si seul l’attribut `version` de la balise `stylesheet` indique le recours à une version supérieure à 1.1, l’erreur soulevée n’empêchera pas l’exécution de la feuille de transformations :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!xsltproc ./files/xslt/bbt-to-html-full.xsl ./files/xml/bbt.xml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour écrire le résultat dans un document, il suffit de rediriger le flux de sortie :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!xsltproc ./files/xslt/bbt-to-html-full.xsl ./files/xml/bbt.xml > ./files/bbt.html"
    ]
   }
  ],
@@ -580,7 +718,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
