Update on unix commands

--- a/0.intro-to-unix-commands/answers/1.basics.ipynb
+++ b/0.intro-to-unix-commands/answers/1.basics.ipynb
@@ -11,8 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Manipulation de fichiers\n",
-    "\n",
+    "## Manipulation de fichiers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1. Créez un répertoire *data* sur votre bureau ;\n",
     "2. toujours sur votre bureau, créez un fichier *poem.txt*\n",
     "3. saisissez le poème *Alicante* de Prévert :\n",
@@ -50,8 +55,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comptage\n",
-    "\n",
+    "## Comptage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Comptez le nombre de mots dans un texte saisi au clavier par un utilisateur. L’opérateur de sortie de la saisie devra être une succession d’au moins trois caractères et dont le premier caractère sera un caractère spécial.\n",
     "\n",
     "Essayez votre programme avec cet haïku de Matsuo Bashō :\n",
@@ -79,8 +89,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Enregistrer une opération\n",
-    "\n",
+    "## Enregistrer une opération"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "En partant de l’exercice précédent, enregistrez individuellement chaque résultat de votre programme dans un fichier *stats.txt*."
    ]
   },
@@ -97,7 +112,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -111,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
