--- a/0.intro-to-unix-commands/answers/3.the-place-to-be.ipynb
+++ b/0.intro-to-unix-commands/answers/3.the-place-to-be.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The place to be\n",
-    "\n",
+    "# The place to be"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "L’objectif de cet exercice est de connaître le nombre d’occurrences de chaque ville de Lorraine citée dans un fichier extrait du corpus du quotidien de *L’Est Républicain*.\n",
     "\n",
     "Vous disposez pour ce faire de deux ressources clés :\n",
@@ -25,24 +30,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "```bash\n",
-    "# Your code here\n",
-    "sed 's/http:\\/\\/fr.dbpedia.org\\/resource\\///g' dbpedia.txt > lorraine.tmp\n",
-    "sed 's/\"//g' lorraine.tmp > lorraine.txt\n",
-    "rm lorraine.tmp\n",
-    "tr -cs \"[:alpha:]\" \"\\n\" < 02_01_2011.xml | sed '/^$/d' > mots.txt\n",
-    "sed '/^[^A-Z]/d' mots.txt | sort | uniq -c > noms-propres.txt\n",
-    "cat noms-propres.txt| grep -f lorraine.txt > stats.txt\n",
-    "```"
+    "# your code here\n",
+    "\n",
+    "# all the towns in Lorraine\n",
+    "! sed 's/http:\\/\\/fr.dbpedia.org\\/resource\\///g' ../data/dbpedia.txt > lorraine.tmp\n",
+    "\n",
+    "# remove character \" and put the cleaned DB in another file\n",
+    "! sed 's/\"//g' lorraine.tmp > ../data/lorraine.txt\n",
+    "\n",
+    "# delete temporary file\n",
+    "! rm lorraine.tmp\n",
+    "\n",
+    "# all non alphabetic letters are converted into spaces, then blank lines are removed\n",
+    "! tr -cs \"[:alpha:]\" \"\\n\" < ../data/02_01_2011.xml | sed '/^$/d' > ../data/words_in_xml.txt\n",
+    "\n",
+    "# keep words beginning \u0000o\u0000r\u0000d\u0000s\u0000 \u0000w\u0000i\u0000t\u0000h\u0000 r, sort them before counting their occurrences\n",
+    "! sed '/^[^A-Z]/d' ../data/words_in_xml.txt | sort | uniq -c > ../data/ne.txt\n",
+    "\n",
+    "# filtering\n",
+    "! cat ../data/ne.txt | grep -f ../data/lorraine.txt > ../data/stats.txt"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -56,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
