--- a/0.intro-to-unix-commands/exercises/3.the-place-to-be.ipynb
+++ b/0.intro-to-unix-commands/exercises/3.the-place-to-be.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The place to be\n",
-    "\n",
+    "# The place to be"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "L’objectif de cet exercice est de connaître le nombre d’occurrences de chaque ville de Lorraine citée dans un fichier extrait du corpus du quotidien de *L’Est Républicain*.\n",
     "\n",
     "Vous disposez pour ce faire de deux ressources clés :\n",
@@ -25,19 +30,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "```bash\n",
-    "# Your code here\n",
-    "\n",
-    "```"
+    "# your code here"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -51,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
