--- a/0.intro-to-unix-commands/exercises/4.web-services.ipynb
+++ b/0.intro-to-unix-commands/exercises/4.web-services.ipynb
@@ -11,63 +11,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Générer un QR code\n",
-    "\n",
+    "## Générer un QR code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "En utilisant le service Web [*QR code*](https://github.com/sayanarijit/qrcode.show), générez un QR code qui renvoie vers le [programme TV du jour](https://www.programme-tv.net/)."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "```bash\n",
-    "# your code here\n",
-    "\n",
-    "```"
+    "# your code here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Chuck Norris never dies\n",
-    "\n",
-    "Cette fois-ci, en utilisant le service Web [The Internet Chuck Norris Database](http://www.icndb.com/api/) (ICNDB), invoquez une *joke* en remplaçant le nom de Chuck Norris par vos nom et prénom."
+    "## Chuck Norris never dies"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```bash\n",
-    "# your code here\n",
-    "\n",
-    "```"
+    "Cette fois-ci, en utilisant le service Web [Chuck Norris Jokes Api](https://api.chucknorris.io/), invoquez une *joke* aléatoire."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Une recherche bibliographique\n",
-    "\n",
+    "## Une recherche bibliographique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Grâce à [l’API de recherche HAL](https://api.archives-ouvertes.fr/docs/search), effectuez une recherche de la chaîne \"Doctor Who\" sur le titre des notices (paramètre `title_t`) et produisez une sortie en XML (paramètre `wt`)."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "```bash\n",
-    "# your code here\n",
-    "\n",
-    "```"
+    "# your code here"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -81,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
