--- a/3.broad-outlines/2.designing-a-programme.ipynb
+++ b/3.broad-outlines/2.designing-a-programme.ipynb
@@ -441,7 +441,7 @@
    "id": "52c55057-807c-4310-a0b3-8092a7028f03",
    "metadata": {},
    "source": [
-    "Exécutons le script. Si un fichier *linear-regression.png* apparaît, vous pouvez maintenant tenter le défi suivant : encapsuler la procédure principale dans une fonction `main()`."
+    "Exécutons le script. Si un fichier *linear-regression.png* apparaît, vous pouvez maintenant tenter le défi suivant : encapsuler la procédure principale dans une fonction `main()` et, ensuite, rendre le script directement exécutable de telle manière que la commande `./scripts/linear-regression.py` dans un terminal ne renvoie aucune erreur."
    ]
   }
  ],
